<resources>
    <string name="app_name">家好临床助手</string>

    <!-- Login -->
    <string name="login">登录</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="phone_num_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="phone_num_error">请输入正确的手机号</string>
    <string name="login_ing">正在登录，请稍候...</string>
</resources>
