<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo"/>
        <View
            style="@style/divider_view"
            android:layout_marginTop="40dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_num"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/whole_8"
                />
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/whole_2"
                android:textColorHint="@color/text_hint"
                android:hint="@string/phone_num_hint"
                android:textSize="@dimen/text_size_14"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="11"
                android:background="@null"/>
        </LinearLayout>
        <View
            style="@style/divider_view"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/whole_8"
                />
            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/whole_2"
                android:textColorHint="@color/text_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/password_hint"
                android:textSize="@dimen/text_size_14"
                android:background="@null"/>
        </LinearLayout>
        <View
            style="@style/divider_view"/>
        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/login"
            android:background="@drawable/selector_bt_login"
            android:textColor="@color/white"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:enabled="false"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</ScrollView>